--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,1 +1,13 @@
+[mod-setting-name]
+train-rainbow-speed=Rainbow Speed [img=info]
 
+[mod-setting-description]
+train-rainbow-speed=Determines how fast to cycle the rainbow colors
+
+[string-mod-setting]
+train-rainbow-speed-off=Disabled
+train-rainbow-speed-veryslow=Very Slow
+train-rainbow-speed-slow=Slow
+train-rainbow-speed-default=Default
+train-rainbow-speed-fast=Fast
+train-rainbow-speed-veryfast=Very Fast
