--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,8 +1,10 @@
 [mod-setting-name]
 train-rainbow-speed=Rainbow Speed [img=info]
+train-rainbow-palette=Rainbow Palette [img=info]
 
 [mod-setting-description]
 train-rainbow-speed=Determines how fast to cycle the rainbow colors
+train-rainbow-palette=Determines the rainbow palette
 
 [string-mod-setting]
 train-rainbow-speed-off=Disabled
@@ -11,3 +13,8 @@ train-rainbow-speed-slow=Slow
 train-rainbow-speed-default=Default
 train-rainbow-speed-fast=Fast
 train-rainbow-speed-veryfast=Very Fast
+train-rainbow-palette-pastel=Pastel
+train-rainbow-palette-light=Light
+train-rainbow-palette-default=Default
+train-rainbow-palette-vibrant=Dark
+train-rainbow-palette-deep=Deep
