--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,6 +1,6 @@
 [mod-setting-name]
 train-rainbow-speed=Rainbow Speed [img=info]
-train-rainbow-palette=Rainbow Palette [img=info]
+train-rainbow-palette=Rainbow Theme [img=info]
 
 [mod-setting-description]
 train-rainbow-speed=Determines how fast to cycle the rainbow colors
