--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -3,8 +3,8 @@ train-rainbow-speed=Rainbow Speed
 train-rainbow-theme=Rainbow Theme
 
 [mod-setting-description]
-train-rainbow-speed=Determines how fast to cycle the rainbow colors
-train-rainbow-palette=Determines the rainbow palette
+train-rainbow-speed=How fast the rainbow colors cycle
+# train-rainbow-palette=The rainbow color theme
 
 [string-mod-setting]
 train-rainbow-speed-off=Disabled
