--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -13,8 +13,54 @@ train-rainbow-speed-slow=Slow
 train-rainbow-speed-default=Default
 train-rainbow-speed-fast=Fast
 train-rainbow-speed-veryfast=Very Fast
-train-rainbow-theme-pastel=Pastel
-train-rainbow-theme-light=Light
-train-rainbow-theme-default=Default
-train-rainbow-theme-vibrant=Dark
-train-rainbow-theme-deep=Deep
+
+train-rainbow-theme-pastel=Rainbow: Pastel
+train-rainbow-theme-light=Rainbow: Light
+train-rainbow-theme-default=Rainbow: Default
+train-rainbow-theme-vibrant=Rainbow: Dark
+train-rainbow-theme-deep=Rainbow: Deep
+
+train-rainbow-theme-lesbian=Pride: Lesbian
+train-rainbow-theme-gay=Pride: Gay
+train-rainbow-theme-bi=Pride: Bi
+train-rainbow-theme-trans=Pride: Trans
+train-rainbow-theme-pan=Pride: Pan
+train-rainbow-theme-ace=Pride: Ace
+train-rainbow-theme-nonbinary=Pride: Nonbinary
+train-rainbow-theme-agender=Pride: Agender
+train-rainbow-theme-progress=Pride: Progress
+
+train-rainbow-theme-united nations=Country: United Nations
+train-rainbow-theme-china=Country: China
+train-rainbow-theme-india=Country: India
+train-rainbow-theme-united states=Country: United States
+train-rainbow-theme-indonesia=Country: Indonesia
+train-rainbow-theme-pakistan=Country: Pakistan
+train-rainbow-theme-nigeria=Country: Nigeria
+train-rainbow-theme-brazil=Country: Brazil
+train-rainbow-theme-bangladesh=Country: Bangladesh
+train-rainbow-theme-russia=Country: Russia
+train-rainbow-theme-mexico=Country: Mexico
+train-rainbow-theme-japan=Country: Japan
+train-rainbow-theme-philippines=Country: Philippines
+train-rainbow-theme-ethiopia=Country: Ethiopia
+train-rainbow-theme-egypt=Country: Egypt
+train-rainbow-theme-vietnam=Country: Vietnam
+train-rainbow-theme-democratic republic of the congo=Country: Democratic Republic of the Congo
+train-rainbow-theme-turkey=Country: Turkey
+train-rainbow-theme-iran=Country: Iran
+train-rainbow-theme-germany=Country: Germany
+train-rainbow-theme-thailand=Country: Thailand
+train-rainbow-theme-france=Country: France
+train-rainbow-theme-united kingdom=Country: United Kingdom
+train-rainbow-theme-tanzania=Country: Tanzania
+train-rainbow-theme-south africa=Country: South Africa
+train-rainbow-theme-italy=Country: Italy
+train-rainbow-theme-ukraine=Country: Ukraine
+train-rainbow-theme-australia=Country: Australia
+train-rainbow-theme-netherlands=Country: Netherlands
+train-rainbow-theme-belgium=Country: Belgium
+train-rainbow-theme-cuba=Country: Cuba
+train-rainbow-theme-czech republic=Country: Czech Republic
+train-rainbow-theme-greece=Country: Greece
+train-rainbow-theme-sweden=Country: Sweden
