add mod name and description locale

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,3 +1,9 @@
+[mod-name]
+rainbow-trains=Rainbow Trains
+
+[mod-description]
+rainbow-trains=Train colors cycle continuously through the rainbow
+
 [mod-setting-name]
 train-rainbow-speed=Rainbow Speed
 train-rainbow-theme=Rainbow Theme
