--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -5,11 +5,11 @@ rainbow-trains=Rainbow Trains
 rainbow-trains=Train colors cycle continuously through the rainbow
 
 [mod-setting-name]
-train-rainbow-speed=Rainbow Speed
-train-rainbow-theme=Rainbow Theme
+train-rainbow-speed=Cycle Speed
+train-rainbow-theme=Color Theme
 
 [mod-setting-description]
-train-rainbow-speed=How fast the rainbow colors cycle
+# train-rainbow-speed=How fast the rainbow colors cycle
 # train-rainbow-palette=The rainbow color theme
 
 [string-mod-setting]
